[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/Wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/Obstacle.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/point.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 654 )

[node name="Obstacle" type="Node2D" groups=[
"obstacles",
]]
script = ExtResource( 2 )

[node name="Wall_1" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 600 )

[node name="Wall_2" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -600 )
rotation = 3.14159

[node name="ScoreArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Collider" type="CollisionShape2D" parent="ScoreArea"]
shape = SubResource( 1 )

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="Wall_1" to="." method="_on_Wall_body_entered"]
[connection signal="body_entered" from="Wall_2" to="." method="_on_Wall_body_entered"]
[connection signal="body_exited" from="ScoreArea" to="." method="_on_ScoreArea_body_exited"]
